WindowsLiquidGlass/src/GPUDeviceManager/src/gpu_device_manager_wrapper.py


        self.dll.GPUMgr_PresentResource.argtypes = [h, ctypes.c_uint64, ctypes.c_uint64, ctypes.c_int]
        self.dll.GPUMgr_PresentResource.restype = ctypes.c_int

        self.dll.GPUMgr_ResizePresenter.argtypes = [h, ctypes.c_uint64, ctypes.c_int, ctypes.c_int]
        self.dll.GPUMgr_ResizePresenter.restype = ctypes.c_int

        # ========== 内部子系统访问 ==========
        self.dll.GPUMgr_GetResourcePoolPtr.argtypes = [h]
        self.dll.GPUMgr_GetResourcePoolPtr.restype = h

    # ------------------------------------------------------------------
    #  设备管理方法
    # ------------------------------------------------------------------

    def initialize(self, preference: GPUPreference = GPUPreference.AUTO) -> bool:
        """初始化GPU设备"""
        return bool(self.dll.GPUMgr_Initialize(self._handle, int(preference)))

    def is_initialized(self) -> bool:
        return bool(self.dll.GPUMgr_IsInitialized(self._handle))

    def get_gpu_count(self) -> int:
        return self.dll.GPUMgr_GetGPUCount(self._handle)

    def get_gpu_info(self, index: int) -> Optional[GPUInfo]:
        name_buffer = ctypes.create_string_buffer(256)
        memory = ctypes.c_size_t()
        vendor_id = ctypes.c_int()
        role = ctypes.c_int()
        monitor_count = ctypes.c_int()

        result = self.dll.GPUMgr_GetGPUInfo(
            self._handle, index, name_buffer, 256,
            ctypes.byref(memory), ctypes.byref(vendor_id),
            ctypes.byref(role), ctypes.byref(monitor_count)
        )
        if not result:
            return None
        memory_mb = memory.value // (1024 * 1024)
        vendor_name = self._get_vendor_name(vendor_id.value)
        is_integrated = self._is_integrated(vendor_id.value, memory_mb)
        return GPUInfo(
            index=index,
            name=name_buffer.value.decode('utf-8'),
            memory_mb=memory_mb,
            vendor_id=vendor_id.value,
            vendor_name=vendor_name,
            role=GPURole(role.value),
            monitor_count=monitor_count.value,
            is_integrated=is_integrated
        )

    def enumerate_gpus(self) -> List[GPUInfo]:
        count = self.get_gpu_count()
        # return [g for i in range(count) if (g := self.get_gpu_info(i))]
        gpus = []
        for i in range(count):
            g = self.get_gpu_info(i)
            if g:
                gpus.append(g)
        return gpus

    def get_monitor_count(self) -> int:
        return self.dll.GPUMgr_GetMonitorCount(self._handle)

    def get_monitor_info(self, index: int) -> Optional[MonitorInfo]:
        left, top, right, bottom, gpu_index = (ctypes.c_int() for _ in range(5))
        result = self.dll.GPUMgr_GetMonitorInfo(
            self._handle, index,
            ctypes.byref(left), ctypes.byref(top),
            ctypes.byref(right), ctypes.byref(bottom),
            ctypes.byref(gpu_index)
        )
        if not result:
            return None
        return MonitorInfo(
            index=index,
            left=left.value, top=top.value,
            right=right.value, bottom=bottom.value,
            width=right.value - left.value,
            height=bottom.value - top.value,
            gpu_index=gpu_index.value
        )

    def enumerate_monitors(self) -> List[MonitorInfo]:
        count = self.get_monitor_count()
        monitors = []
        for i in range(count):
            m = self.get_monitor_info(i)
            if m:
                monitors.append(m)
        return monitors

    def get_main_device(self) -> int:
        return self.dll.GPUMgr_GetMainDevice(self._handle)

    def get_main_context(self) -> int:
        return self.dll.GPUMgr_GetMainContext(self._handle)

    def get_device_by_gpu(self, gpu_index: int) -> int:
        return self.dll.GPUMgr_GetDeviceByGPUIndex(self._handle, gpu_index)

    def get_context_by_gpu(self, gpu_index: int) -> int:
        return self.dll.GPUMgr_GetContextByGPUIndex(self._handle, gpu_index)

    def get_device_by_monitor(self, monitor_index: int) -> int:
        return self.dll.GPUMgr_GetDeviceByMonitor(self._handle, monitor_index)

    def get_debug_info(self) -> str:
        info = self.dll.GPUMgr_GetDebugInfo(self._handle)
        return info.decode('utf-8') if info else ""

    def shutdown(self):
        """销毁本实例的 GPUContext（设备/资源池/互操作全部释放）"""
        if self._handle:
            self.dll.GPUMgr_Destroy(self._handle)
            self._handle = None

    def __del__(self):
        if getattr(self, '_handle', None):
            self.shutdown()

    # ------------------------------------------------------------------
    #  资源池管理方法
    # ------------------------------------------------------------------

    def add_resource(self, resource_ptr: int, resource_type: GPUResourceType,
                     srv_ptr: int, owner_gpu: int, tag: str = "") -> int:
        return self.dll.GPUMgr_AddResourceToPool(
            self._handle, resource_ptr, int(resource_type), srv_ptr, owner_gpu,
            tag.encode('utf-8') if tag else None
        )

    def create_resource(self, resource_type: GPUResourceType, width: int, height: int,
                        format: int, bind_flags: int, usage: int,
                        gpu_index: int, tag: str = "") -> int:
        return self.dll.GPUMgr_CreateResourceInPool(
            self._handle, int(resource_type), width, height,
            format, bind_flags, usage, gpu_index,
            tag.encode('utf-8') if tag else None
        )

    def get_resource(self, resource_id: int) -> Optional[ResourceInfo]:
        resource_ptr = ctypes.c_void_p()
        srv_ptr = ctypes.c_void_p()
        res_type = ctypes.c_int()
        width = ctypes.c_int()
        height = ctypes.c_int()
        owner_gpu = ctypes.c_int()

        result = self.dll.GPUMgr_GetResourceFromPool(
            self._handle, resource_id,
            ctypes.byref(resource_ptr), ctypes.byref(srv_ptr),
            ctypes.byref(res_type), ctypes.byref(width),
            ctypes.byref(height), ctypes.byref(owner_gpu)
        )
        if not result:
            return None
        return ResourceInfo(
            resource_id=resource_id,
            resource_ptr=resource_ptr.value or 0,
            srv_ptr=srv_ptr.value or 0,
            resource_type=GPUResourceType(res_type.value),
            width=width.value,
            height=height.value,
            owner_gpu=owner_gpu.value
        )

    def remove_resource(self, resource_id: int):
        self.dll.GPUMgr_RemoveResourceFromPool(self._handle, resource_id)

    def clear_resource_pool(self):
        self.dll.GPUMgr_ClearResourcePool(self._handle)

    def copy_resource_to_gpu(self, src_resource_id: int, dst_gpu_index: int) -> int:
        return self.dll.GPUMgr_CopyResourceToGPU(self._handle, src_resource_id, dst_gpu_index)

    def copy_resource_to_cpu(self, resource_id: int, buffer: ctypes.Array) -> bool:
        return bool(self.dll.GPUMgr_CopyResourceToCPU(self._handle, resource_id, ctypes.byref(buffer)))

    def copy_resource_to_numpy(self, resource_id: int):
        """拷贝GPU纹理资源到numpy数组，返回 (H, W, 4) uint8 BGRA 数组"""
        try:
            import numpy as np
        except ImportError:
            print("需要安装numpy: pip install numpy")
            return None

        width = ctypes.c_int()
        height = ctypes.c_int()
        stride = ctypes.c_int()

        if not self.dll.GPUMgr_GetResourceDataSize(
            self._handle, resource_id,
            ctypes.byref(width), ctypes.byref(height), ctypes.byref(stride)
        ):
            return None

        w, h, s = width.value, height.value, stride.value
        buffer = (ctypes.c_ubyte * (h * s))()
        if not self.dll.GPUMgr_CopyResourceToCPU(self._handle, resource_id, buffer):
            return None

        arr = np.frombuffer(buffer, dtype=np.uint8).reshape((h, w, 4))
        return arr.copy()

    def get_pool_stats(self) -> Tuple[int, int]:
        total_resources = ctypes.c_int()
        total_memory = ctypes.c_size_t()
        self.dll.GPUMgr_GetPoolStats(self._handle, ctypes.byref(total_resources), ctypes.byref(total_memory))
        return (total_resources.value, total_memory.value)

    def get_resource_texture(self, resource_id: int) -> int:
        return self.dll.GPUMgr_GetResourceTexture(self._handle, resource_id)

    def get_resource_srv(self, resource_id: int) -> int:
        return self.dll.GPUMgr_GetResourceSRV(self._handle, resource_id)

    def get_resource_rtv(self, resource_id: int) -> int:
        return self.dll.GPUMgr_GetResourceRTV(self._handle, resource_id)

    def get_resource_uav(self, resource_id: int) -> int:
        return self.dll.GPUMgr_GetResourceUAV(self._handle, resource_id)

    # ------------------------------------------------------------------
    #  Desktop Duplication 显示器捕获
    # ------------------------------------------------------------------

    def initialize_display_capture(self) -> bool:
        return bool(self.dll.GPUMgr_InitializeDisplayCapture(self._handle))

    def shutdown_display_capture(self):
        self.dll.GPUMgr_ShutdownDisplayCapture(self._handle)

    def get_display_count(self) -> int:
        return self.dll.GPUMgr_GetDisplayCount(self._handle)

    def get_display_bounds(self, display_index: int) -> Optional[dict]:
        left, top, right, bottom = (ctypes.c_int() for _ in range(4))
        if self.dll.GPUMgr_GetDisplayBounds(
            self._handle, display_index,
            ctypes.byref(left), ctypes.byref(top),
            ctypes.byref(right), ctypes.byref(bottom)
        ):
            return {
                'left': left.value, 'top': top.value,
                'right': right.value, 'bottom': bottom.value,
                'width': right.value - left.value,
                'height': bottom.value - top.value,
            }
        return None

    def get_display_texture(self, display_index: int) -> int:
        return self.dll.GPUMgr_GetDisplayTexture(self._handle, display_index)

    def release_display_frame(self, display_index: int):
        self.dll.GPUMgr_ReleaseDisplayFrame(self._handle, display_index)

    def capture_display_region(self, display_index: int, x: int, y: int,
                               width: int, height: int, tag: str = "") -> int:
        return self.dll.GPUMgr_CaptureDisplayRegion(
            self._handle, display_index, x, y, width, height,
            tag.encode('utf-8') if tag else None
        )

    # ------------------------------------------------------------------
    #  D3D11/OpenGL 互操作方法
    # ------------------------------------------------------------------

    def initialize_gl_interop(self) -> bool:
        """初始化 OpenGL 互操作（必须在 OpenGL Context 中调用）"""
        return self.dll.GPUMgr_InitializeGLInterop(self._handle) == 1

    def is_gl_interop_supported(self) -> bool:
        return self.dll.GPUMgr_IsGLInteropSupported(self._handle) == 1

    def shutdown_gl_interop(self):
        self.dll.GPUMgr_ShutdownGLInterop(self._handle)

    def create_gl_texture_from_d3d(self, resource_id: int) -> Optional[int]:
        handle = self.dll.GPUMgr_CreateGLTextureFromD3D(self._handle, resource_id)
        return handle if handle else None

    def lock_gl_texture(self, gl_handle: int) -> bool:
        return bool(gl_handle) and self.dll.GPUMgr_LockGLTexture(self._handle, gl_handle) == 1

    def unlock_gl_texture(self, gl_handle: int) -> bool:
        return bool(gl_handle) and self.dll.GPUMgr_UnlockGLTexture(self._handle, gl_handle) == 1

    def release_gl_texture(self, gl_handle: int) -> bool:
        return bool(gl_handle) and self.dll.GPUMgr_ReleaseGLTexture(self._handle, gl_handle) == 1

    def get_gl_texture_id(self, gl_handle: int) -> int:
        if not gl_handle:
            return 0
        return self.dll.GPUMgr_GetGLTextureID(self._handle, gl_handle)

    # ------------------------------------------------------------------
    #  DXGI SwapChain Presenter
    # ------------------------------------------------------------------
